<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="10dp">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:text="@string/final_score"
                    android:textColor="@color/champShadow"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/final_score_value"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:text="@string/scores"
                    android:textColor="@color/champShadow"/>
            </LinearLayout>

            <ScrollView
                android:layout_width="300dp"
                android:layout_height="350dp"
                android:background="@drawable/border">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:id="@+id/add_scores_here">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:text="@string/high_scores"
                        android:textColor="@color/white"/>
                    <View style = "@style/horiz_divider_small"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:text="@string/blank_high_score"
                        android:id="@+id/score_params"
                        android:visibility="gone"
                        android:textColor="@color/champShadow"/>
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingTop="10dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_name"
                    android:textColor="@color/champShadow"/>
                <EditText
                    android:id="@+id/initials"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/champShadow"
                    android:maxLength="3"/>
                <Button
                    android:id="@+id/submit_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners"
                    android:textColor="@color/white"
                    android:text="@string/next_button"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
