<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/champDark">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="@string/score"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:paddingRight="3dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scores"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:id="@+id/score_value"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">
                <Button
                    android:id="@+id/hint_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="@string/hint_button"
                    android:textSize="4pt"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_corners"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/question_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/champShadow"
                    android:textStyle="bold"
                    android:padding="24dp"/>

                <LinearLayout
                    android:id="@+id/answersHere"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <RadioGroup
                        android:id="@+id/group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@drawable/rounded_corners"
                        android:textColor="@color/white">
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp">
                    <Button
                        android:id="@+id/next_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next_button"
                        android:textStyle="bold"
                        android:background="@drawable/rounded_corners"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint"
                        android:visibility="invisible"
                        android:paddingTop="5dp"
                        android:textColor="@color/champShadow"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/debug"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/debug"
                        android:textColor="@color/champShadow"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>